--- a/package.yaml
+++ b/package.yaml
@@ -8,15 +8,19 @@ copyright:           "2020 David Strawn, isomarcte@gmail.com"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 description:         Haskell Data Type Definitions For the Hashicorp Vault API.
 
 dependencies:
 - base >= 4.7 && < 5
+- QuickCheck >= 2.13.2 && < 3.0.0
+- aeson >= 1.4.6.0 && < 1.5.0.0
+- generic-random >= 1.2.0.0 && < 1.3.0.0
+- text >= 1.2.3.1 && < 1.3.0.0
 
 library:
   source-dirs: src
+  other-modules: Vault.Data.Internal.Text
 
 ghc-options:
   - -Wcompat
