--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,7 @@ dependencies:
 - base >= 4.7 && < 5
 - aeson >= 1.4.6.0 && < 1.5.0.0
 - text >= 1.2.3.1 && < 1.3.0.0
+- uuid >= 1.3.13 && < 2.0.0
 - vector >= 0.12.1.2 && < 0.13.0.0
 
 library:
