--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,8 @@ description:         Haskell Data Type Definitions For the Hashicorp Vault API.
 dependencies:
 - base >= 4.7 && < 5
 - aeson >= 1.4.6.0 && < 1.5.0.0
+- attoparsec >= 0.13.2.3 && < 0.14.0.0
+- scientific >= 0.3.6.2 && < 0.4.0.0
 - text >= 1.2.3.1 && < 1.3.0.0
 - uuid >= 1.3.13 && < 2.0.0
 - vector >= 0.12.1.2 && < 0.13.0.0
@@ -25,6 +27,7 @@ ghc-options:
   - -Wcompat
   - -Werror
   - -Weverything
+  - -Wno-missing-deriving-strategies
   - -Wno-unsafe
   - -ferror-spans
   - -flate-dmd-anal
